<resources>
    <string name="app_name">Glitched</string>
    <string name="sua_melhor_loja">Sua melhor loja de Games!</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="entrar">Entrar</string>
    <string name="ainda_nao_tem_conta">Ainda não tem uma conta?</string>
    <string name="cadastre_se">Cadastre-se!</string>
    <string name="insira_e_mail_e_senha_para_efetuar_o_cadastro">Insira um E-mail e Senha válidos para efetuar o cadastro</string>
    <string name="senha_com_no_m_nimo_6_digitos">Senha com no mínimo 6 digitos</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sair">Sair</string>
    <string name="options">Opções</string>
    <string name="menu">Menu</string>
    <string name="configura_es">Configurações</string>
    <string name="icone_usu_rio_checado">icone usuário checado</string>
    <string name="usuario_logado">Usuário Logado!</string>
    <string name="cancelar">Cancelar</string>
</resources>