<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/options"
        android:icon="@drawable/ic_more_vert"
        android:iconTint="@color/white"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,UnusedAttribute">

        <menu>

            <item
                android:id="@+id/configSettings"
                android:title="@string/configura_es"
                android:icon="@drawable/ic_settings"
                app:iconTint="@color/black"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/configExit"
                android:title="@string/sair"
                android:icon="@drawable/ic_exit"
                app:iconTint="@color/black"
                app:showAsAction="never"
                />

        </menu>

    </item>
</menu>