<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".forms.FormLogin">


        <ImageView
            android:id="@+id/imageLogoApp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/game"/>

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageLogoApp"
            android:paddingBottom="20dp"
            android:text="@string/sua_melhor_loja"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/idLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_layout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLogin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text=""
                android:background="@drawable/shape_edit_text"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:padding="15dp"
                android:minHeight="48dp"
                android:maxLines="1"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@color/black"
                tools:targetApi="m"/>

            <EditText
                android:id="@+id/editTextSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text=""
                android:background="@drawable/shape_edit_text"
                android:hint="@string/senha"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:padding="15dp"
                android:minHeight="48dp"
                android:maxLines="1"
                android:drawableEnd="@drawable/ic_lock"
                android:drawableTint="@color/black"
                tools:targetApi="m" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/esqueci_a_senha"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_margin="20dp"/>

            <Button
                android:id="@+id/buttonEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:padding="15dp"
                android:background="@drawable/shape_button"
                app:backgroundTint="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/entrar"
                app:icon="@drawable/ic_login"
                app:iconPadding="10dp"
                app:iconGravity="textEnd"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/ainda_nao_tem_conta"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/textCadastrese"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idLinearLayout" />

        <TextView
            android:id="@+id/textCadastrese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cadastre_se"
            android:textColor="@color/green_01"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:paddingBottom="80dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>