<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/dialog_shape"
        tools:ignore="UselessLeaf">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:src="@drawable/check_green"
            android:contentDescription="@string/icone_usu_rio_checado" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/usuario_logado"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailLogado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textStyle="italic"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/buttonDialogEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button"
            app:backgroundTint="@color/black"
            app:icon="@drawable/ic_login"
            app:iconPadding="5dp"
            app:iconGravity="textEnd"
            tools:ignore="SpeakableTextPresentCheck"/>

        <Button
            android:id="@+id/buttonDialogCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancelar"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button"
            app:backgroundTint="@color/black"
            app:icon="@drawable/ic_cancel"
            app:iconPadding="5dp"
            app:iconGravity="textEnd"
            tools:ignore="SpeakableTextPresentCheck"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>