<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".forms.FormRegister">

        <ImageView
            android:id="@+id/imageLogoApp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/game"/>

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageLogoApp"
            android:paddingBottom="20dp"
            android:text="@string/insira_e_mail_e_senha_para_efetuar_o_cadastro"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/idLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/shape_layout"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textRegister">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_edit_text"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@color/black"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="15dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:targetApi="m" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:gravity="start"
                android:text="@string/senha_com_no_m_nimo_6_digitos"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_edit_text"
                android:drawableEnd="@drawable/ic_lock"
                android:drawableTint="@color/black"
                android:hint="@string/senha"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="15dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:targetApi="m" />

            <Button
                android:id="@+id/buttonEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_button"
                android:padding="15dp"
                android:text="@string/cadastrar"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black"
                app:icon="@drawable/ic_user"
                app:iconGravity="textEnd"
                app:iconPadding="10dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>